public/_css/styles.css
/* Color Palette found: http://paletton.com/palette.php?uid=53p0V0kno-e9AUeh-JpuLumvIjU */

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  width: 100%;
  background-color: rgb(51, 142, 172);
  position: fixed;
}

h1 {
  text-align: center;
}

.button {
  font-family: verdana;
  padding: 3px 5px;
  font-size: 1em;
  border-radius: 0.5em;
  transition: background-color 0.2s linear;
  border: 2px solid rgba(255, 190, 115, 0.8);
  background-color: rgba(255, 190, 115, 0.7);
}

.button:hover {
  background-color: rgba(255, 220, 179, 0.7);
}

.button:focus {
  outline: 0;
}

.button:active {
  background-color: rgba(255, 190, 115, 1);
}

#removeButton {
  margin-right: 35px;
}

#addItemButton {
  margin-left: 5px;
}

.list-header {
  width: 400px;
  text-align: center;
  margin: 0 auto;
  padding: 5px 0px;
}

.list-header input {
  width: 100%;
  font-family: 'Permanent Marker', cursive;
  margin: 30px auto;
  padding: 5px;
  font-size: 35px;
  text-align: center;
  background-color: rgb(51, 142, 172);
  border: rgb(51, 142, 172);
}

.list-header input:focus {
  outline: 0;
  border: 0.5px solid rgba(255,255,255,0.1);
  border-radius: 0.1em;
}

#list-container {
  width: 400px;
  height: 400px;
  margin: 10px auto;
  background-color: rgba(182, 242, 109, 0.7);
  border-radius: 1em;
  overflow-y: hidden;
}

#list-container:hover {
  overflow-y: auto;
}

.list-item {
  cursor: pointer;
  width: 85%;
  display: block;
  margin: 5px;
  border-bottom: 1px solid black;
  padding: 5px;
  list-style: none;
  font-size: 17px;
}
.list-item .check {
  margin: 5px;
}
.list-item .text {
  width: 80%;
  font-family: 'Anaheim', sans-serif;
  font-size: 1.2em;
  background: transparent;
  background-color: rgba(76, 152, 109, 0);
  border: rgba(76, 152, 109, 0);
}

.list-item .text:focus {
  outline: 0;
}

.deleteIcon {
  font-size: 18px;
  margin-left: 20px;
  opacity: 0.4;
  cursor: pointer;
}

.strikeToggle {
  opacity: 0.3;
  text-decoration: line-through;
}

.hiddenToggle {
  display: none;
}

.toggleEnabled {
  border: 2px solid rgba(255, 190, 115, 0.5);
  background-color: rgba(255, 190, 115, 1);
}

.toggleEnabled:hover {
  background-color: rgba(255, 220, 179, 1);
  border: 2px solid rgba(255, 190, 115, 1);
}

.toggleEnabled:active {
  background-color: rgba(255, 220, 179, 0.3);
}


#list-footer {
  position: relative;
  width: 400px;
  height: 40px;
  margin: auto;
  text-align: center;
}

#emailButton {
  margin: 0px 20px;
  font-size: 1.3em;
  padding: 4px 6px;
}

.downloadLink {
  color: black;
}

.disabled {
  cursor: not-allowed;
  border: 2px solid rgba(255, 190, 115, 0.3);
  background-color: rgba(255, 190, 115, 0.4);
}

.disabled:hover {
  cursor: not-allowed;
  border: 2px solid rgba(255, 190, 115, 0.3);
  background-color: rgba(255, 190, 115, 0.4);
}

/* CSS Animation Section */

.clouds {
  width: 100%;
  height: 200px;
  position: absolute;
  background: transparent url(../_assets/img/front_cloud.png) 0 0 no-repeat;
}

.cloudA {
  top: 100px;
  z-index: -100;
  /* animation syntax shorthand: name duration timing-function delay iteration-count direction fill-mode */
  -webkit-animation: drift 30s linear infinite;
  -moz-animation: drift 30s linear infinite;
  -o-animation: drift 30s linear infinite;
  animation: drift 30s linear infinite;
}

.cloudB {
  top: 240px;
  z-index: -200;
  -webkit-animation: drift 35s linear 10s infinite backwards;
  -moz-animation: drift 35s linear 10s infinite backwards;
  -o-animation: drift 35s linear 10s infinite backwards;
  animation: drift 35s linear 10s infinite backwards;
}

.cloudC {
  top: 440px;
  z-index: -300;
  -webkit-animation: drift 45s linear 20s infinite backwards;
  -moz-animation: drift 45s linear 20s infinite backwards;
  -o-animation: drift 45s linear 20s infinite backwards;
  animation: drift 45s linear 20s infinite backwards;
}

@-webkit-keyframes drift {
  from{transform: translateX(-300px);}
  to{transform: translateX(1400px);}
}

@-moz-keyframes drift {
  from{transform: translateX(-300px);}
  to{transform: translateX(1400px);}
}

@-o-keyframes drift {
  from{transform: translateX(-300px);}
  to{transform: translateX(1400px);}
}

@keyframes drift {
  from{transform: translateX(-300px);}
  to{transform: translateX(1400px);}
}

